# ckanext-initiatives

./: .gitignore  README.md  pyproject.toml  setup.py
ckanext/initatives/: plugins.py
ckanext/initiatives/: action.py  auth.py  controller.py  helpers.py  logic.py  plugins.py
ckanext/initiatives/templates/ckanext_initiatives/snippets/resource_item/: nonauth_explore.html  nonauth_title.html
ckanext/initiatives/templates/package/snippets/: resource_item.html
